# vdpauinfo

./: AUTHORS  COPYING  LICENSE  Makefile  Makefile.am  README.md  VDPDeviceImpl.h  configure.ac  functions.py  vdpauinfo.cpp  vdpinfo.cpp
