AC_PREREQ([2.57])
AC_INIT(vdpauinfo,[0.1],[xorg@lists.freedesktop.org],vdpauinfo)
AM_INIT_AUTOMAKE([dist-bzip2 foreign])
AM_MAINTAINER_MODE

AC_PROG_CXX
AC_PROG_INSTALL

PKG_CHECK_MODULES(VDPAU, x11 [vdpau >= 0.2])
VDPAUINFO_CXXFLAGS="$VDPAUINFO_CXXFLAGS $VDPAU_CFLAGS"
VDPAUINFO_LIBS="$VDPAUINFO_LIBS $VDPAU_LIBS"

AC_SUBST(VDPAUINFO_CXXFLAGS)
AC_SUBST(VDPAUINFO_LIBS)

XORG_CHANGELOG

AC_OUTPUT([Makefile])
